--- a/src/app/message/message-writer/message-writer.component.html
+++ b/src/app/message/message-writer/message-writer.component.html
@@ -1,1 +1,4 @@
-<p>message-writer works!</p>
+<div class="d-flex">
+    <input type="text" class="form-control" [(ngModel)]="userText"/>
+    <button class="btn btn-primary" (click)="sendText()">create</button>
+</div>
