--- a/src/app/page/page-footer/page-footer.component.html
+++ b/src/app/page/page-footer/page-footer.component.html
@@ -1,3 +1,5 @@
-<nav class="navbar bg-dark text-white fixed-botton">
-    <a href="mention" routerLink="/mentions">Mention légale</a>
+<nav class="navbar bg-dark text-white fixed-bottom">
+    <a routerLink="/mentions">Mention légale</a>
+    <a routerLink="/messages">Messages</a>
+    <a routerLink="/">Login</a>
 </nav>
