--- a/src/app/message/message-list/message-list.component.html
+++ b/src/app/message/message-list/message-list.component.html
@@ -1,1 +1,5 @@
-<p>message-list works!</p>
+<ul class="list-group">
+    <li class="list-group-item" *ngFor="let m of messages">
+        {{ m.text }}
+    </li>
+</ul>
